# rusd-airdrop-web

./: .dockerignore  .gitignore  Dockerfile  README.md  app.js  index.html  railway.json  render.yaml  requirements.txt  server.py  start.sh  styles.css
solana-engine/: .gitignore  Anchor.toml  README.md  metadata.json  package.json  tsconfig.json
solana-engine/programs/solana-stablecoin/: Cargo.toml
solana-engine/programs/solana-stablecoin/src/: lib.rs
solana-engine/scripts/: add-metadata.ts  create-metadata-via-program.ts  deploy.ts  mint-rusd-to-user.ts  mint-tokens.ts
solana-engine/tests/: solana-stablecoin.ts
