[package]
name = "solana-stablecoin"
version = "0.1.0"
description = "A stablecoin implementation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_stablecoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = "5.1.1"
